@@ -1,43 +1,56 @@
 package com.meongnyangerang.meongnyangerang.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.meongnyangerang.meongnyangerang.domain.accommodation.Accommodation;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.AccommodationImage;
-import com.meongnyangerang.meongnyangerang.domain.accommodation.AccommodationType;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.AllowPet;
-import com.meongnyangerang.meongnyangerang.domain.accommodation.PetType;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationFacility;
-import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationFacilityType;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationPetFacility;
-import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationPetFacilityType;
 import com.meongnyangerang.meongnyangerang.domain.host.Host;
 import com.meongnyangerang.meongnyangerang.domain.host.HostStatus;
 import com.meongnyangerang.meongnyangerang.dto.accommodation.AccommodationCreateRequest;
+import com.meongnyangerang.meongnyangerang.exception.ErrorCode;
+import com.meongnyangerang.meongnyangerang.exception.MeongnyangerangException;
+import com.meongnyangerang.meongnyangerang.repository.HostRepository;
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AccommodationFacilityRepository;
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AccommodationImageRepository;
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AccommodationPetFacilityRepository;
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AccommodationRepository;
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AllowPetRepository;
-import java.time.LocalDateTime;
+import com.meongnyangerang.meongnyangerang.service.image.ImageService;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.lang.Nullable;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 
 @ExtendWith(MockitoExtension.class)
 class AccommodationServiceTest {
+
+  @Mock
+  private HostRepository hostRepository;
 
   @Mock
   private AccommodationRepository accommodationRepository;
@@ -54,11 +67,8 @@ class AccommodationServiceTest {
   @Mock
   private AccommodationImageRepository accommodationImageRepository;
 
- /* @Mock
-  private ImageService imagerService; // TODO
-
   @Mock
-  private HostService hostService;*/ // TODO
+  private ImageService imageService;
 
   @InjectMocks
   private AccommodationService accommodationService;
@@ -69,78 +79,47 @@ class AccommodationServiceTest {
   private List<MultipartFile> additionalImages;
   private Accommodation accommodation;
 
+  private static final UUID MOCK_UUID = UUID
+      .fromString("123e4567-e89b-12d3-a456-426614174000");
+
+  private static final String IMAGE_PATH_PREFIX = "image/";
+
   @BeforeEach
   void setUp() {
-    // 호스트 생성
+    // 호스트 객체 생성
     host = Host.builder()
         .id(1L)
-        .email("test@gmail.com")
-        .name("test-name")
-        .nickname("test-nickname")
-        .password("test-password")
-        .profileImageUrl("/test/profile/image.jpg")
-        .businessLicenseImageUrl("/test/business/license/image.jpg")
-        .submitDocumentImageUrl("/test/submit/document/image/jpg")
-        .phoneNumber("01012345678")
+        .name("호스트명")
+        .email("host@example.com")
+        .nickname("호스트닉네임")
         .status(HostStatus.ACTIVE)
-        .createdAt(LocalDateTime.now())
-        .updatedAt(LocalDateTime.now())
         .build();
 
-    // 테스트용 요청 DTO 생성
-    request = AccommodationCreateRequest.builder()
-        .name("테스트 숙소")
-        .type(AccommodationType.PENSION)
-        .address("제주시 노형구")
-        .detailedAddress("노형동")
-        .description("제주 감귤")
-        .latitude(37.123)
-        .longitude(127.123)
-        .facilities(Arrays.asList("WIFI", "SWIMMING_POOL"))
-        .petFacilities(Arrays.asList("PET_FOOD", "EXERCISE_AREA"))
-        .allowedPets(Arrays.asList("SMALL_DOG", "CAT"))
-        .build();
+    // 숙소 요청 Mock 생성
+    request = mock(AccommodationCreateRequest.class);
 
-    // 테스트용 썸네일 이미지 파일 생성
+    // 이미지 파일 생성
     thumbnail = new MockMultipartFile(
         "thumbnail",
         "thumbnail.jpg",
-        "image/jpeg",
-        "thumbnail image".getBytes()
-    );
-
-    // 테스트용 추가 이미지 파일 생성
-    MockMultipartFile image1 = new MockMultipartFile(
-        "image1",
-        "test1.jpg",
         "image/jpg",
-        "additional image 1".getBytes()
+        "thumbnail content".getBytes()
     );
 
-    MockMultipartFile image2 = new MockMultipartFile(
-        "image2",
-        "test2.jpg",
-        "image/jpg",
-        "additional image 2".getBytes()
+    // 추가 이미지 생성
+    additionalImages = Arrays.asList(
+        new MockMultipartFile("image1", "image1.jpg", "image/jpg", "image1 content".getBytes()),
+        new MockMultipartFile("image2", "image2.jpg", "image/jpg", "image2 content".getBytes())
     );
 
-    // 다중 이미지 파일
-    additionalImages = Arrays.asList(thumbnail, image1, image2);
-
-    // 숙소 엔티티 생성
+    // 숙소 객체 생성
     accommodation = Accommodation.builder()
         .id(1L)
         .host(host)
-        .name(request.getName())
-        .description(request.getDescription())
-        .address(request.getAddress())
-        .detailedAddress(request.getDetailedAddress())
-        .latitude(request.getLatitude())
-        .longitude(request.getLongitude())
-        .type(request.getType())
-        .thumbnailUrl("/test/accommodations/thumbnail.jpg")
-        .createdAt(LocalDateTime.now())
-        .updatedAt(LocalDateTime.now())
+        .name("숙소명")
+        .description("숙소 설명")
+        .address("서울시 강남구")
+        .thumbnailUrl(IMAGE_PATH_PREFIX + MOCK_UUID + ".jpg")
         .build();
   }
 
@@ -148,134 +127,140 @@ class AccommodationServiceTest {
   @DisplayName("숙소 등록 - 성공")
   void createAccommodation_Success() {
     // given
-    //when(hostRepository.findById(host.getId())).thenReturn(host); // TODO
+    when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
     when(accommodationRepository.existsByHost_Id(host.getId())).thenReturn(false);
 
-    // 썸네일 + 추가 이미지 한번에 업로드
-    /*when(imagerService.storeImageFiles(additionalImages)).thenReturn(List.of(
-        "/test/thumbnail.jpg",
-        "/test/additional-image1.jpg",
-        "/test/additional-image2.jpg"
-    ));*/
+    List<String> facilities = Arrays.asList("WIFI", "PUBLIC_SWIMMING_POOL");
+    List<String> petFacilities = Arrays.asList("PET_FOOD", "EXERCISE_AREA");
+    List<String> allowPets = Arrays.asList("SMALL_DOG", "MEDIUM_DOG");
 
-    when(accommodationRepository.save(accommodation)).thenReturn(accommodation);
+    when(request.getFacilities()).thenReturn(facilities);
+    when(request.getPetFacilities()).thenReturn(petFacilities);
+    when(request.getAllowPets()).thenReturn(allowPets);
 
-    // AccommodationImage 저장 Mocking
-    AccommodationImage accommodationImage1 = AccommodationImage.builder()
-        .id(1L)
-        .accommodation(accommodation)
-        .imageUrl("/test/additional-image1.jpg")
-        .createdAt(LocalDateTime.now())
-        .build();
+    // AccommodationCreateRequest.toEntity 모킹
+    doReturn(accommodation).when(request).toEntity(any(Host.class), anyString());
 
-    AccommodationImage accommodationImage2 = AccommodationImage.builder()
-        .id(2L)
-        .accommodation(accommodation)
-        .imageUrl("/test/additional-image2.jpg")
-        .createdAt(LocalDateTime.now())
-        .build();
+    // ArgumentCaptor 설정
+    ArgumentCaptor<List<AccommodationFacility>> facilitiesCaptor = ArgumentCaptor
+        .forClass(List.class);
+    ArgumentCaptor<List<AccommodationPetFacility>> petFacilitiesCaptor = ArgumentCaptor
+        .forClass(List.class);
+    ArgumentCaptor<List<AllowPet>> allowPetsCaptor = ArgumentCaptor
+        .forClass(List.class);
+    ArgumentCaptor<List<AccommodationImage>> accommodationImageCaptor = ArgumentCaptor
+        .forClass(List.class);
 
-    when(accommodationImageRepository.save(accommodationImage1)).thenReturn(accommodationImage1);
-    when(accommodationImageRepository.save(accommodationImage2)).thenReturn(accommodationImage2);
+    // UUID 고정 및 파일명 생성 메서드 모킹
+    try (MockedStatic<UUID> mockedUUID = mockStatic(UUID.class)) {
+      mockedUUID.when(UUID::randomUUID).thenReturn(MOCK_UUID);
 
-    // 편의시설, 반려동물 편의시설, 허용 반려동물 Mocking
-    AccommodationFacility accommodationFacility = AccommodationFacility.builder()
-        .id(1L)
-        .accommodation(accommodation)
-        .type(AccommodationFacilityType.WIFI)
-        .build();
+      String thumbnailFilename = createFilename(thumbnail.getOriginalFilename());
+      List<String> additionalImageFilenames = createFilenames(additionalImages);
 
-    AccommodationPetFacility accommodationPetFacility1 = AccommodationPetFacility.builder()
-        .id(1L)
-        .accommodation(accommodation)
-        .type(AccommodationPetFacilityType.PET_FOOD)
-        .build();
+      // when
+      accommodationService.createAccommodation(host.getId(), request, thumbnail, additionalImages);
 
-    AccommodationPetFacility accommodationPetFacility2 = AccommodationPetFacility.builder()
-        .id(2L)
-        .accommodation(accommodation)
-        .type(AccommodationPetFacilityType.EXERCISE_AREA)
-        .build();
+      // then
+      // 호스트 검증 확인
+      verify(hostRepository).findById(host.getId());
+      verify(accommodationRepository).existsByHost_Id(host.getId());
 
-    AllowPet allowPet1 = AllowPet.builder()
-        .id(1L)
-        .accommodation(accommodation)
-        .petType(PetType.SMALL_DOG)
-        .build();
+      // 숙소 저장 확인
+      verify(accommodationRepository).save(accommodation);
 
-    AllowPet allowPet2 = AllowPet.builder()
-        .id(2L)
-        .accommodation(accommodation)
-        .petType(PetType.CAT)
-        .build();
+      // 편의시설 저장 확인
+      verify(accommodationFacilityRepository).saveAll(facilitiesCaptor.capture());
+      List<AccommodationFacility> capturedFacilities = facilitiesCaptor.getValue();
+      assertEquals(2, capturedFacilities.size());
 
-    when(accommodationFacilityRepository.save(accommodationFacility))
-        .thenReturn(accommodationFacility); // 숙소 편의시설
+      // 반려동물 편의시설 저장 확인
+      verify(accommodationPetFacilityRepository).saveAll(petFacilitiesCaptor.capture());
+      List<AccommodationPetFacility> capturedPetFacilities = petFacilitiesCaptor.getValue();
+      assertEquals(2, capturedPetFacilities.size());
 
-    when(accommodationPetFacilityRepository.save(accommodationPetFacility1))
-        .thenReturn(accommodationPetFacility1); // 숙소 반려동물 편의시설 1
-    when(accommodationPetFacilityRepository.save(accommodationPetFacility2))
-        .thenReturn(accommodationPetFacility2); // 숙소 반려동물 편의시설 2
+      // 허용 반려동물 저장 확인
+      verify(allowPetRepository).saveAll(allowPetsCaptor.capture());
+      List<AllowPet> capturedAllowPets = allowPetsCaptor.getValue();
+      assertEquals(2, capturedAllowPets.size());
 
-    when(allowPetRepository.save(allowPet1)).thenReturn(allowPet1); // 숙소 허용 반려동물 1
-    when(allowPetRepository.save(allowPet2)).thenReturn(allowPet2); // 숙소 허용 반려동물 2
-
-    // when
-    accommodationService.createAccommodation(host.getId(), request, thumbnail, additionalImages);
-
-    // then
-    //verify(hostRepository, times(1)).findById(host.getId()); // TODO
-    verify(accommodationRepository, times(1))
-        .existsByHost_Id(host.getId());
-
-    //verify(imagerService, times(1)).storageImageFiles(additionalImages); // TODO
-
-    verify(accommodationRepository, times(1)).save(accommodation);
-
-    verify(accommodationImageRepository, times(1)).save(accommodationImage1);
-    verify(accommodationImageRepository, times(1)).save(accommodationImage2);
-
-    verify(accommodationFacilityRepository, times(1)).save(accommodationFacility);
-    verify(accommodationFacilityRepository, times(1)).save(accommodationFacility);
-
-    verify(accommodationPetFacilityRepository, times(1))
-        .save(accommodationPetFacility1);
-    verify(accommodationPetFacilityRepository, times(2))
-        .save(accommodationPetFacility2);
-
-    verify(allowPetRepository, times(1)).save(allowPet1);
-    verify(allowPetRepository, times(1)).save(allowPet2);
+      // 추가 이미지 저장 확인
+      verify(accommodationImageRepository).saveAll(accommodationImageCaptor.capture());
+      verify(imageService).storeImage(thumbnail, thumbnailFilename);
+      verify(imageService, times(1))
+          .storeImage(additionalImages.get(0), additionalImageFilenames.get(0));
+      verify(imageService, times(1))
+          .storeImage(additionalImages.get(1), additionalImageFilenames.get(1));
+    }
   }
 
   @Test
-  @DisplayName("숙소 등록 실패  - 이미 등록된 경우 409 에러")
-  void createAccommodation_WhenAlreadyRegistered_ThrowsException() {
+  @DisplayName("숙소 등록 - 호스트 없음 실패")
+  void createAccommodation_HostNotFound_Failure() {
     // given
-    //when(hostRepository.findById(host.getId())).thenReturn(host); // TODO
+    when(hostRepository.findById(host.getId())).thenReturn(Optional.empty());
+
+    // when
+    // then
+    assertThatThrownBy(() -> accommodationService.createAccommodation(
+        host.getId(), request, thumbnail, additionalImages))
+        .isInstanceOf(MeongnyangerangException.class)
+        .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.NOT_EXISTS_HOST);
+
+    verify(hostRepository).findById(host.getId());
+  }
+
+  @Test
+  @DisplayName("숙소 등록 - 권한 없음")
+  void createAccommodation_NotAuthorized() {
+    // given
+    host = createNotAuthorizedHost(2L);
+    when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
+
+    // when
+    // then
+    assertThatThrownBy(() -> accommodationService.createAccommodation(
+        host.getId(), request, thumbnail, additionalImages))
+        .isInstanceOf(MeongnyangerangException.class)
+        .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.INVALID_AUTHORIZED);
+
+    verify(hostRepository).findById(host.getId());
+  }
+
+  @Test
+  @DisplayName("숙소 등록 - 이미 숙소 있음 실패")
+  void createAccommodation_AccommodationAlreadyExists_Failure() {
+    // given
+    when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
     when(accommodationRepository.existsByHost_Id(host.getId())).thenReturn(true);
 
     // when
     // then
-    /*assertThatThrownBy(() ->
-        accommodationService.createAccommodation(host.getId(), request, thumbnail, additionalImages))
-        .isInstanceOf(RuntimeException.class) // TODO: CustomException 으로 변경 409
-        .hasFieldOrPropertyWithValue(""); // TODO*/
+    assertThatThrownBy(() -> accommodationService.createAccommodation(
+        host.getId(), request, thumbnail, additionalImages))
+        .isInstanceOf(MeongnyangerangException.class)
+        .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.ACCOMMODATION_ALREADY_EXISTS);
+
+    verify(hostRepository).findById(host.getId());
+    verify(accommodationRepository).existsByHost_Id(host.getId());
   }
 
   @Test
-  @DisplayName("숙소 등록 실패 - 승인된 호스트가 아닐 경우 403 에러")
-  void createAccommodation_WhenNotAuthorizedHost_ThrowsException() {
+  @DisplayName("숙소 등록 - 허용 반려동물 없음 실패")
+  void createAccommodation_EmptyAllowPets_Failure() {
     // given
-    //when(hostRepository.findById(host.getId())).thenReturn(host); // TODO
-    Host notAuthorizedHost = createNotAuthorizedHost(1L);
+    when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
+    when(accommodationRepository.existsByHost_Id(host.getId())).thenReturn(false);
+
+    // 허용 반려동물 목록이 비어있는 경우
+    when(request.getAllowPets()).thenReturn(new ArrayList<>());
 
     // when
     // then
-    /*assertThatThrownBy(() ->
-        accommodationService.createAccommodation(
-            notAuthorizedHost.getId(), request, thumbnail, additionalImages)
-    ).isInstanceOf(RuntimeException.class) // TODO: CustomException 으로 변경 403
-        .hasFieldOrPropertyWithValue(""); // TODO*/
+    assertThatThrownBy(() -> accommodationService.createAccommodation(
+        host.getId(), request, thumbnail, additionalImages))
+        .isInstanceOf(MeongnyangerangException.class)
+        .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.EMPTY_PET_TYPE);
   }
 
   private Host createNotAuthorizedHost(Long hostId) {
@@ -283,5 +268,27 @@ class AccommodationServiceTest {
         .id(hostId)
         .status(HostStatus.PENDING)
         .build();
+  }
+
+  private static String createFilename(String originalFilename) {
+    String fileName = UUID.randomUUID() + getExtension(originalFilename);
+    return IMAGE_PATH_PREFIX + fileName;
+  }
+
+  private static List<String> createFilenames(@Nullable List<MultipartFile> additionalImages) {
+    if (additionalImages != null && !additionalImages.isEmpty()) {
+      return additionalImages.stream()
+          .map(image -> createFilename(image.getOriginalFilename()))
+          .toList();
+    }
+    return null;
+  }
+
+  private static String getExtension(String originalFileName) {
+    try {
+      return originalFileName.substring(originalFileName.lastIndexOf("."));
+    } catch (StringIndexOutOfBoundsException e) {
+      throw new MeongnyangerangException(ErrorCode.INVALID_EXTENSION);
+    }
   }
 }
